# rospian-buildfarm

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh
.claude/: settings.json
.codex/: config.toml
apt/: rospian-preferences
deb/: 10-debian-trixie.list  42-debian-trixie.list  42-debian-trixie.yaml  generate_trixie_rules.sh
pkg/: build_meta_pkg.sh
pkg/ros-jazzy-base/debian/: changelog  control  copyright  depends.txt  gen-depends.sh  rules
releases/: ros2.repos.20260121T120030Z.locked.yaml
ros2/: fetch_vendor_sources.sh  patches.sh  ros2.repos  sequence-paths  skip_packages
ros2/sbuild/logs/: ros-jazzy-ackermann-msgs_2.0.2-0trixie+20260110201411_arm64.build  ros-jazzy-ackermann-steering-controller_4.36.0-0trixie+20260111203214_arm64.build  ros-jazzy-action-msgs_2.0.3-0trixie+20260108024239_arm64.build  ros-jazzy-action-tutorials-cpp_0.33.8-0trixie+20260108192649_arm64.build  (+515 more)
ros2_base/: fetch_vendor_sources.sh  patches.sh  ros2.repos  sequence  sequence-paths  skip_packages
ros2_base/patches/src/ros/ros_environment/: CMakeLists.txt
ros2_base/patches/src/ros/ros_environment/env-hooks/: 1.ld_library_path.dsv.in  1.ld_library_path.sh.in
ros2_control/: ros2.repos
ros2_vision/: ros2.repos
rosdep/: 10-debian-trixie.yaml  generate_trixie_rules.sh
scripts/: .env.sh  check_ros2_repos_branches.py  cleanup_schroot_sessions.sh  export_keys.sh  health_check.sh  import_changes_into_repo.sh  publish_gh_pages.sh  s3_backup_keys.sh  s3_backup_repo.sh  s3_restore_repo.sh  snapshot_repos.sh  test_bloom_generate.sh
(+12 files in other folders)
